# python-project-template

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  rename-project.sh
.github/workflows/: ci.yml
tests/: test_replace_with_new_name.py
