[tool.poetry]
name = "replace_with_new_name"
version = "0.1.0"
description = ""
authors = ["Piotr Zieliński <piotrekzie100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.0"

[tool.poetry.scripts]
replace_with_new_name = "replace_with_new_name.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
