[tool.poetry]
name = "replace_with_new_name"
version = "0.1.0"
description = ""
authors = ["Piotr Zieliński <piotrekzie100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.0"

[tool.poetry.scripts]
replace_with_new_name = "replace_with_new_name.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[flake8]
max-line-length = 88
extend-ignore = ["E203", "E231"]

[tool.pytest.ini_options]
addopts = "--color=yes"
norecursedirs = "assets/*"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = "True"
